--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,18 @@
 .env.development.local
 .env.test.local
 .env.production.local
+server/node_modules/
 server/.env  
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# React
+client/node_modules/
+client/.env
+client/build/
+
+# OS/IDE
+.DS_Store
+.vscode/
